--- a/.github/workflows/mend-prioritize.yml
+++ b/.github/workflows/mend-prioritize.yml
@@ -32,7 +32,7 @@ jobs:
           WS_USERKEY: ${{secrets.USERKEY}}
           WS_WSS_URL: ${{secrets.MENDURL}}
           WS_PRODUCTNAME: GH_${{github.event.repository.name}}
-          WS_PROJECTNAME: ${{github.ref}}_Prioritize
+          WS_PROJECTNAME: Prioritize
           WS_ENABLEIMPACTANALYSIS: true
           WS_RESOLVEALLDEPENDENCIES: false
           WS_MAVEN_RESOLVEDEPENDENCIES: true
